Fixed all warnings and completed/cleaned TODOs.